Fix header link alignment

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -656,7 +656,7 @@
 	max-width: none;
 
 	h1, h2, h3, h4, h5, h6 {
-		align-items: center;
+		align-items: baseline;
 		align-content: center;
 		display: flex;
 
